# pyproject-template

./: .gitattributes  .gitconfig  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  compose.python.dev.yaml  compose.python.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yml  cicd.yml
config/otel/: collector-config.yaml
cpp/: README.md
cpp/roll-dice/: CMakeLists.txt  main.cpp
docs/: CONTRIBUTING.md  DEVELOPMENT.md  index.md
docs/slides/: linting.ipynb  linting.slides.html  telemetry.ipynb  telemetry.slides.html
misc/otel/: collector-config.yaml
python/: arithmetic.py  main.py
python/api/: main.py  otel.py  tracer.py
src/pyproject_template/: main.py
src/pyproject_template/api/: config.py  logger.py  main.py  meter.py  otel.py  tracer.py
src/pyproject_template/dashboard/: main.py
src/tests/: app_test.py  dashboard_test.py  server_routes_test.py  server_test.py  telemetry_test.py
tests/: app_test.py  server_test.py
