[project]
name = "pyproject-template"
version = "0.0.1"
description = "Template repository for Python projects based on uv"
authors = [{ name = "Author Name", email = "author.name@domain" }]
requires-python = "<3.13,>=3.10"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.116.1,<0.122",
    "streamlit>=1.47.1,<2",
    "opentelemetry-sdk>=1.31.1,<2",
    "opentelemetry-api>=1.31.1,<2",
    "opentelemetry-exporter-otlp>=1.31.1,<2",
    "opentelemetry-distro>=0.54b1,<0.60",
    "opentelemetry-instrumentation-fastapi>=0.54b1,<0.60",
    "opentelemetry-instrumentation-logging>=0.54b1,<0.60",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<10",
    "pytest-cov>=6.2.1,<8",
    "ruff>=0.12.7,<0.15",
    "jupyterlab>=4.4.5,<5",
    "pre-commit>=4.0.1,<5",
    "pytest-mock>=3.14.1,<4",
    "fastapi-mock>=0.3.4,<0.4",
    "poethepoet>=0.36.0,<0.39",
    "testcontainers>=4.14.1",
    "tilt>=0.0.5",
    "ty>=0.0.20",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocstrings[python]>=0.30.0,<0.31",
    "mkdocs-material>=9.6.16,<10",
    "jupyter>=1.1.1,<2",
    "mkdocs-jupyter>=0.25.1,<0.26",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["src/pyproject_template"]

[tool.hatch.build.targets.wheel]
include = ["src/pyproject_template"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    ".github"
    ]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "B", # flake8-bugbear
    "PIE", # flake8-pie
    "C4", # flake8-comprehensions
    "I", # isort
    "UP", # pyupgrade
]
ignore = ["E501","E203","B024","B028","UP037"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
