[project]
name = "pyproject-template"
version = "0.0.1"
description = "Template repository for Python projects based on uv"
authors = [{ name = "Author Name", email = "author.name@domain" }]
requires-python = "<3.13,>=3.10"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.116.1,<0.140",
    "streamlit>=1.47.1,<2",
    "opentelemetry-sdk>=1.31.1,<2",
    "opentelemetry-api>=1.31.1,<2",
    "opentelemetry-exporter-otlp>=1.31.1,<2",
    "opentelemetry-distro>=0.54b1,<0.64",
    "opentelemetry-instrumentation-fastapi>=0.54b1,<0.60",
    "opentelemetry-instrumentation-logging>=0.54b1,<0.60",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<10",
    "pytest-cov>=6.2.1,<8",
    "ruff>=0.12.7,<0.16",
    "jupyterlab>=4.4.5,<5",
    "pre-commit>=4.0.1,<5",
    "pytest-mock>=3.14.1,<4",
    "fastapi-mock>=0.3.4,<0.4",
    "poethepoet>=0.36.0,<0.47",
    "testcontainers>=4.14.1",
    "tilt>=0.0.5",
    "ty>=0.0.20",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocstrings[python]>=0.30.0,<1.1",
    "mkdocs-material>=9.6.16,<10",
    "jupyter>=1.1.1,<2",
    "mkdocs-jupyter>=0.25.1,<0.27",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["src/pyproject_template"]

[tool.hatch.build.targets.wheel]
include = ["src/pyproject_template"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    ".github"
    ]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "B", # flake8-bugbear
    "PIE", # flake8-pie
    "C4", # flake8-comprehensions
    "I", # isort
    "UP", # pyupgrade
]
ignore = ["E501","E203","B024","B028","UP037"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths
testpaths = ["src/tests"]

# Output options
addopts = "-v --strict-markers --tb=short"

# Markers for organizing tests
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.coverage.run]
branch = true
source = ["src/pyproject_template"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
# Set minimum coverage threshold
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.poe.tasks]
# Testing tasks
test = "pytest"
test-cov = "pytest --cov --cov-report=html --cov-report=term-missing"
test-unit = { cmd = "pytest -m unit", help = "Run unit tests only" }
test-integration = { cmd = "pytest -m integration", help = "Run integration tests only" }
test-verbose = "pytest -vv"

# Code quality tasks
lint = "ruff check src/ --fix"
format = "ruff format src/"
format-check = "ruff format src/ --check"
type-check = "ty src/"

# Combined checks
check = [
  { cmd = "ruff check src/", help = "Check linting" },
  { cmd = "ruff format src/ --check", help = "Check formatting" },
  { cmd = "pytest", help = "Run tests" }
]

# Documentation tasks
docs-build = "mkdocs build"
docs-serve = "mkdocs serve"
docs-deploy = "mkdocs gh-deploy"

# Development utilities
pre-commit-run = "pre-commit run --all-files"
clean = """
rm -rf dist/ build/ *.egg-info .pytest_cache .ruff_cache htmlcov/
find . -type d -name __pycache__ -exec rm -rf {} +
find . -type f -name '*.pyc' -delete
"""

dashboard = { cmd = "streamlit run src/pyproject_template/dashboard/main.py", help = "Start the Streamlit dashboard" }

# Help text
_default = { help = "Run all checks and tests", cmd = "poe check && poe test-cov" }
